fixed navbar spacing

--- a/client/src/components/Footer/index.css
+++ b/client/src/components/Footer/index.css
@@ -1,15 +1,2 @@
 
-/* .footer {
-  position: relative;
-  left: 20em;
-  top: 50rem;
-  bottom: 0;
-  width: 20%;
-  background-color: none;
-  color: black;
-  text-align: center;
-  padding: 2rem;
-  margin-left: 10rem;
-  float: center;
-} */
 
